--- a/Lab03_518H0545/exercise2.html
+++ b/Lab03_518H0545/exercise2.html
@@ -23,7 +23,7 @@
 
 <div class="container">
     <h2>Add student</h2>
-    <form action="/action_page.php" onsubmit = "return InsertValue()">
+    <form action="/action_page.php">
 
         <div class="form-group">
             <label for="firstname">First name:</label>
@@ -43,7 +43,7 @@
 		</div>
 
 
-        <button type="submit" class="btn btn-default">Add</button>
+        <button type="button" class="btn btn-default" onclick = "InsertValue()">Add</button>
     </form>
 
     <br>
@@ -56,7 +56,7 @@
             <th>Delete</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody id = "tbody">
         <tr>
             <td>John</td>
             <td>Doe</td>
