--- a/Lab03_518H0545/exercise2.html
+++ b/Lab03_518H0545/exercise2.html
@@ -23,7 +23,7 @@
 
 <div class="container">
     <h2>Add student</h2>
-    <form action="/action_page.php">
+    <form action="/action_page.php" id = "form">
 
         <div class="form-group">
             <label for="firstname">First name:</label>
@@ -43,7 +43,7 @@
 		</div>
 
 
-        <button type="button" class="btn btn-default" onclick = "InsertValue()">Add</button>
+        <button type="button" class="btn btn-default" onclick = "InsertValue()" value = "Reset form">Add</button>
     </form>
 
     <br>
