--- a/Lab03_518H0545/exercise3.html
+++ b/Lab03_518H0545/exercise3.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src = "./js/exercise03.js"></script>
 </head>
 <body>
 
@@ -19,17 +20,22 @@
     checkbox{
         margin-right: 10px;
     }
+
+    #error_message{
+        color: red;
+    }
 </style>
 
 
 <div class="container">
     <br>
     <br>
-    <p>Message will be here</p><br><br>
+    <p id = "message_show">Message will be here</p><br><br>
 
     <div class="form-group">
         <label for="message">Message:</label>
         <input type="text" class="form-control" id="message" placeholder="Enter new message" name="message">
+        <p id = "error_message"></p>
     </div>
     <div class="form-group">
         <label for="color">Color:</label>
@@ -49,8 +55,9 @@
         <input type="checkbox" name="underline" id="underline">
     </div>
 
-    <button type="button">Show message</button>
+    <button type="button" onclick = "helloMessage()">Show message</button>
 
 </div>
+
 </body>
 </html>
