Final update for exercise2.html

--- a/Lab03_518H0545/exercise2.html
+++ b/Lab03_518H0545/exercise2.html
@@ -61,13 +61,13 @@
             <td>John</td>
             <td>Doe</td>
             <td>john@example.com</td>
-            <td><button>Delete</button></td>
+            <td><button onclick = "removeRow(this)">Delete</button></td>
         </tr>
         <tr>
             <td>Mary</td>
             <td>Moe</td>
             <td>mary@example.com</td>
-            <td><button>Delete</button></td>
+            <td><button onclick = "removeRow(this)">Delete</button></td>
         </tr>
 
         </tbody>
