--- a/Lab03_518H0545/exercise3.html
+++ b/Lab03_518H0545/exercise3.html
@@ -23,6 +23,7 @@
 
     #error_message{
         color: red;
+        font-size: 20px;
     }
 </style>
 
@@ -34,28 +35,33 @@
 
     <div class="form-group">
         <label for="message">Message:</label>
-        <input type="text" class="form-control" id="message" placeholder="Enter new message" name="message">
+        <input type="text" class="form-control" id="message" onkeyup = "displayMessage()" placeholder="Enter new message" name="message">
         <p id = "error_message"></p>
     </div>
     <div class="form-group">
         <label for="color">Color:</label>
-        <select name="color" id="color">
-            <option>Black</option>
-            <option>Red</option>
-            <option>Green</option>
-            <option>Blue</option>
+        <select name="color" id="color" onchange = "changeColor()">
+            <option value = "black">Black</option>
+            <option value = "red">Red</option>
+            <option value = "green">Green</option>
+            <option value = "blue">Blue</option value = "black">
         </select>
     </div>
     <div class="form-group">
+        <!--checkbox for bold-->
         <label for="bold">Bold:</label>
-        <input type="checkbox" name="bold" id="bold">
+        <input type="checkbox" name="bold" id="bold" onchange = "makeitBold()">
+
+        <!--checkbox for italic-->
         <label for="italic">Italic:</label>
-        <input type="checkbox" name="italic" id="italic">
+        <input type="checkbox" name="italic" id="italic" onchange = "makeitItalic()">
+
+        <!--checkbox for underline-->
         <label for="underline">Underline:</label>
-        <input type="checkbox" name="underline" id="underline">
+        <input type="checkbox" name="underline" id="underline" onchange = "makeitUnderline()">
     </div>
 
-    <button type="button" onclick = "helloMessage()">Show message</button>
+    <button type="button" onclick = "showMessage()">Show message</button>
 
 </div>
 
