Added first function but not finished yet

--- a/Mid-term_518H0545/index.html
+++ b/Mid-term_518H0545/index.html
@@ -75,6 +75,12 @@
 	}
 </style>
 
+<script> 
+	function checkInfor(){
+		
+	}
+</script>
+
 <body>
 	<h1>Midterm test revision</h1>
 	<form id = "form"> 
