--- a/Lab04_518H0545/Lab04/ex1.html
+++ b/Lab04_518H0545/Lab04/ex1.html
@@ -38,74 +38,118 @@
 
  -->
 
-<br>
-<p>Thay đổi kích thước trình duyệt web để thấy hiệu ứng</p>
-<br>
-
 <!-- buộc toàn bộ dòng và cột phải bỏ trong class container -->
-<div class="container">
+<div class="container fluid mt-5">
 
     <!-- dòng phải là con trực tiếp của container, mang class row -->
     <div class="row">
 
         <!-- cột 1 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top .rgba-red-light" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
         <!-- cột 2 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
         <!-- cột 3 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
         <!-- cột 14 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
         <!-- cột 5 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
         <!-- cột 6 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
-        <!-- cột 7 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <!-- cột 1 -->
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
-        <!-- cột 8 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <!-- cột 2 -->
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
-        <!-- cột 9 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <!-- cột 3 -->
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
-        <!-- cột 10 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <!-- cột 14 -->
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
-        <!-- cột 11 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <!-- cột 5 -->
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
-        <!-- cột 12 -->
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-1">
-            <p style="color: white; background-color: green; padding: 10px">Hello</p>
+        <!-- cột 6 -->
+        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 mb-4">
+			<div class = "card border-danger rounded shadow">
+				<img src = "./images/avatar.png" class="card-img-top" alt="...">
+				<h5 class="card-title text-primary ml-3">Name</h5>
+				<p class = "card-text ml-3">Text for card</p>
+			</div>
         </div>
 
 
