--- a/Mid-term_518H0545/index.html
+++ b/Mid-term_518H0545/index.html
@@ -193,23 +193,27 @@
 			return false;
 		}
 		
+		//If full name is empty
 		else if(fullName === ""){
 			fullName_error.innerHTML = "Full name cannot be empty";
 			full_name.focus();
 			return false;
 		}
 		
+		//If username is empty
 		else if(userName === ""){
 			userName_error.innerHTML = "Username cannot be empty";
 			user_name.focus();
 			return false;
 		}
 		
+		//If password is empty
 		else if(passWord === ""){
 			passWord_error.innerHTML = "Password cannot be empty";
 			pass_word.focus();
 			return false;
 		}
+		
 		else{
 			alert("Full name: " + fullName + "Username: " + userName + "")
 			return true;
