--- a/Lab04_518H0545/Lab04/ex2.html
+++ b/Lab04_518H0545/Lab04/ex2.html
@@ -15,7 +15,7 @@
 
 <div class="container fluid mt-5 border-primary">
 
-    <form class = "border-danger">
+    <form class = "border-danger card p-4 bg-light col-md-6 mx-auto">
 	  <div class="form-row">
 		<div class="form-group col-md-6">
 		  <label for="first-name">First name</label>
